# pact-backend

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yaml
pact_backend/: server.py
pact_backend/config/: __init__.py  database.py  environment.py
pact_backend/constants/: middleware.py
pact_backend/helpers/: auth.py  filename.py  service.py  singleton.py
pact_backend/middleware/: auth.py
pact_backend/models/: auth.py  chat.py  history.py  statistics.py
pact_backend/routers/: auth.py  chat.py  history.py  llm.py  statistics.py
pact_backend/routers/api/: v1.py
pact_backend/services/: metrics.py  metrics_of_response.py  preprocessor.py  response.py  response_generator.py  upload.py
